--- a/package.json
+++ b/package.json
@@ -3,8 +3,7 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "start": "node src/app.js --watch",
-    "dev": "node index.js --watch"
+    "start": "nodemon src/app.js --watch"
   },
   "keywords": [],
   "author": "",
