--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,8 @@
+APP_NAME=your_app_name_here
 PORT=your_port_here
+
 ACCESS_TOKEN=your_access_token_here
+
 FIREBASE_API_KEY=your_firebase_api_key_here
 FIREBASE_DATABASE_URL=your_firebase_database_url_here
 FIREBASE_AUTH_DOMAIN=your_firebase_auth_domain_here
